# Tauon

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  NOTICE  README.md  __builtins__.pyi  bootstrap-android-deps.sh  buildozer.spec  changelog.txt  compile-phazor-ao.sh  compile-phazor-pipewire.sh  compile-phazor.sh  compile-translations.py  compile_phazor.sh  compile_translations.py  config.txt  fastbin.pyx  fetch-noto-sans.sh  hard_fix.py  input.txt  install.sh  linux.spec  mac.spec  messages.pot  pyproject.toml  requirements.txt  requirements_devel.txt  requirements_macos.txt  requirements_optional.txt  requirements_unified.txt  requirements_windows.txt  run.sh  rust_nonce_solver  (+16 more)
.codex/environments/: environment.toml
.github/: FUNDING.yml  release_body.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: attach_release_files.yaml  build_Flatpak.yaml  build_Linux.yaml  build_Windows_MINGW64.yaml  build_and_release.yaml  build_extras.yaml  build_macOS.yaml  compile_translations.yaml  pyright.yaml  ruff.yaml  winget.yml
docs/: features.md  guide.md  index.html  libraries.txt  setup.md  style.css  usage.md
extra/: TaskBarLib.idl  TaskbarLib.idl  build_macos_icon_assets.sh  com.github.taiko2k.tauonmb.appdata.xml  com.github.taiko2k.tauonmb.desktop  com.github.taiko2k.tauonmb.sh  entitlements.plist  generate_dmg_background.py  macos_resign_repack_notarize_dmg.sh  msyspac.txt  repo-install.sh  repo-uninstall.sh  requirements-windows.txt  requirements_linux.txt  requirements_macos.txt  requirements_optional.txt  requirements_windows.txt  setup.iss  tauonmb-alt.sh  tauonmb.desktop  tauonmb.sh  win-build-exe.sh  win-requirements.txt
extra/pyinstaller-hooks/: hook-gi.repository.Rsvg.py  hook-pylast.py
extra/pyinstaller-hooks/pre_safe_import_module/: hook-gi.repository.Rsvg.py
lib/: libraries.txt
locale/: messages.pot
locale/brh/LC_MESSAGES/: tauon.po
locale/cs/LC_MESSAGES/: tauon.po
locale/de/LC_MESSAGES/: tauon.po
locale/es/LC_MESSAGES/: tauon.po
locale/et/LC_MESSAGES/: tauon.po
locale/fi/LC_MESSAGES/: tauon.po
locale/fr_FR/: tauon.po
locale/fr_FR/LC_MESSAGES/: tauon.po
locale/hu/LC_MESSAGES/: tauon.po
locale/ia/LC_MESSAGES/: tauon.po
locale/id/LC_MESSAGES/: tauon.po
locale/it/LC_MESSAGES/: tauon.po
locale/ja/LC_MESSAGES/: tauon.po
locale/ja_JP/LC_MESSAGES/: tauon.po
locale/jp/LC_MESSAGES/: tauon.po
locale/ko/LC_MESSAGES/: tauon.po
locale/nb_NO/LC_MESSAGES/: tauon.po
locale/nl/LC_MESSAGES/: tauon.po
locale/pl/LC_MESSAGES/: tauon.po
locale/pt/LC_MESSAGES/: tauon.po
locale/pt_BR/LC_MESSAGES/: tauon.po
locale/pt_PT/LC_MESSAGES/: tauon.po
locale/ru/LC_MESSAGES/: tauon.po
locale/sk/LC_MESSAGES/: tauon.po
locale/sv/LC_MESSAGES/: tauon.po
locale/tr/LC_MESSAGES/: tauon.po
locale/uk/LC_MESSAGES/: tauon.po
locale/zh_CN/LC_MESSAGES/: tauon.po
modules/: t_draw.py  t_extra.py  t_tagscan.py
msys2/: msyspac.txt  win-requirements.txt
packaging/android/: bootstrap-android-deps.sh  buildozer.spec
packaging/pyinstaller/: linux.spec  mac.spec  windows.spec
projectm/: PKGBUILD
src/lrclib-solver/: Cargo.toml  lrclib_solver.rs
src/nowplaying/: Info.plist  README.md  TauonNowPlaying.swift  build_app.sh
src/phazor/: CMakeLists.txt  phazor.c
src/smtc/: TauonSMTC.sln
src/smtc/TauonSMTC/: TauonSMTC.vcxproj  dllmain.cpp
src/tauon/: __main__.py  tauon.py
src/tauon/assets/: Assets.car  tau-mac.icns
src/tauon/assets/tau.icon/: icon.json
src/tauon/t_modules/: guitar_chords.py  logging.py  t_autobpm.py  t_bootstrap.py  t_chrome.py  t_config.py  t_custom.py  t_db_migrate.py  t_dbus.py  t_discord.py  t_draw.py  t_enums.py  t_extra.py  t_guitar_chords.py  t_jellyfin.py  t_launch.py  t_logging.py  t_lyrics.py  t_macos_menubar.py  t_main.py  t_main_rework.py  t_nowplaying_macos.py  t_phazor.py  t_prefs.py  t_replaygain.py  t_room.py  t_search.py  t_spot.py  t_stream.py  t_subsonic.py  t_svgout.py  t_tagscan.py  t_themeload.py  t_tidal.py  t_topchart.py  t_webserve.py  t_window.py  t_window_state.py
src/tauon/templates/: input.txt  theme.css
src/tauon/tests/: disabled_test_get_colour_from_line.py  test_get_colour_from_line.py  test_get_year_from_string.py  test_launch.py  test_lyrics.py  test_window_state.py
src/tauon/theme/: Ash.ttheme  Astro.ttheme  Carbon.ttheme  Cucumber Splash.ttheme  High Contrast Dark.ttheme  Lavender Light.ttheme  Lime.ttheme  Neon Love.ttheme  Rose.ttheme  Sky.ttheme  Sunken.ttheme  Turbo.ttheme  Vape.ttheme  Wasp.ttheme
src/tauon/theme/Charmed/: Charmed.tdeco  Charmed.ttheme
src/tauon_native/: README.md  host_api.h  main.cpp  python_host.cpp
t_modules/: spot.py  t_autodownload.py  t_bass.py  t_bootstrap.py  t_cast.py  t_chrome.py  t_config.py  t_db_migrate.py  t_dbus.py  t_draw.py  t_extra.py  t_gdk_extra.py  t_gstreamer.py  t_jellyfin.py  t_launch.py  t_lyrics.py  t_main.py  t_phazor.py  t_search.py  t_spot.py  t_stream.py  t_svgout.py  t_tagscan.py  t_themeload.py  t_tidal.py  t_topchart.py  t_webserve.py
templates/: code.js  radio.html  radio.js  remote.html  theme.css
theme/: Astro.ttheme  Carbon.ttheme  Cloud.ttheme  Cucumber Splash.ttheme  Deep.ttheme  High Contrast Dark.ttheme  Ice.ttheme  Lavender Light.ttheme  Lavender.ttheme  Lime.ttheme  Mindaro.ttheme  Neon Love.ttheme  Orchid.ttheme  Rose.ttheme  Sky.ttheme  Smoke.ttheme  Sweet.ttheme  Turbo.ttheme  Vape.ttheme  Wasp.ttheme  Whiskey.ttheme  foo-gray-orange.ttheme  ncmpcpp_dark.ttheme  white.ttheme
tools/: __init__.py
tools/i18n/: __init__.py  compile_translations.py  update_translations.py
